[gd_scene load_steps=7 format=3 uid="uid://bs27ujuwcwr2s"]

[ext_resource type="Script" uid="uid://dhcmaagnjpiv6" path="res://shared/ui/hints/hint_selection_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bg7ksjyi2wv7e" path="res://acts/full_game/hints/assets/book.png" id="2"]
[ext_resource type="Theme" uid="uid://dc65itxrsnhls" path="res://shared/assets/themes/head_line_text.theme" id="3"]
[ext_resource type="Texture2D" uid="uid://c6b0e6ntei7fv" path="res://acts/full_game/colecting_parts_arc/drivein/assets/tempiconcostume.png" id="4"]
[ext_resource type="Theme" uid="uid://ci01d6um0b6kl" path="res://shared/assets/themes/hint_back_button.tres" id="5"]
[ext_resource type="Script" uid="uid://dfx5l28kw1ufq" path="res://shared/ui/hints/back_button.gd" id="6"]

[node name="HintSelectionMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 0)
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -391.0
offset_right = 640.0
offset_bottom = 391.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2")

[node name="RightSide" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 81.0
offset_top = 49.0
offset_right = 612.0
offset_bottom = 611.0

[node name="SectionTitleLabel" type="Label" parent="Background/RightSide"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.12549, 0.121569, 0.219608, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 48
text = "Autopopulated title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContextualVisual" type="TextureRect" parent="Background/RightSide"]
unique_name_in_owner = true
custom_minimum_size = Vector2(531, 400)
layout_mode = 2
texture = ExtResource("4")
stretch_mode = 3

[node name="HintContainer" type="VBoxContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 662.0
offset_top = 25.0
offset_right = 1224.0
offset_bottom = 701.0
theme_override_constants/separation = 10
alignment = 1

[node name="BackButton" type="Button" parent="." node_paths=PackedStringArray("remove_this_on_click")]
layout_mode = 0
offset_left = 561.0
offset_top = 789.0
offset_right = 828.0
offset_bottom = 842.0
theme = ExtResource("5")
text = "HINTS_BACK"
script = ExtResource("6")
remove_this_on_click = NodePath("..")
